--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.59.3",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.2.7"
   }
 }
