--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build && next export",
+    "start": "next start -H 0.0.0.0 -p ${PORT:-80}",
     "lint": "next lint"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.59.3",
+    "sharp": "^0.31.3",
     "typescript": "5.0.2"
   },
   "devDependencies": {
