--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
 
     - name: Build Project
       run: npm run build
+  
+    - name: Export Static Project
+      run: npm run exp
 
     - name: Sync Files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
