--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
 #         port: 80
         script: |
           cd ../home/tmmk/public_html/tmmk-site
+          git restore package-lock.json
           git pull origin main
           git status
           npm install
