--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,8 +51,8 @@ jobs:
 #         port: 80
         script: |
           cd ../home/tmmk/public_html/tmmk-site
-          git restore package-lock.json
+#         git restore package-lock.json
           git pull origin main
           git status
-          npm install
+          npm ci
           pm2 restart tmmk-site
