--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,5 @@ jobs:
           cd ../home/tmmk/public_html/tmmk-site
           git pull origin main
           git status
-          npm ci
+          npm install
           pm2 restart tmmk-site
