--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-markdown": "^8.0.6",
+    "react-share": "^4.4.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.59.3",
     "sharp": "^0.31.3",
