--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,19 +14,19 @@ jobs:
       SERVER: tmmk.info
 
     steps:
-      - name: Get latest code
-        uses: actions/checkout@v2.3.2
+      # - name: Get latest code
+      #   uses: actions/checkout@v2.3.2
 
-      - name: Use Node.js 16 LTS
-        uses: actions/setup-node@v1
-        with:
-          node-version: "16.x"
+      # - name: Use Node.js 16 LTS
+      #   uses: actions/setup-node@v1
+      #   with:
+      #     node-version: "16.x"
 
-      - name: Install NPM Modules
-        run: npm install
+      # - name: Install NPM Modules
+      #   run: npm install
 
-      - name: Build Project
-        run: npm run build
+      # - name: Build Project
+      #   run: npm run build
 
       #     - name: Export Static Project
       #       run: npm run exp
@@ -41,7 +41,7 @@ jobs:
       #         local-dir: ./out/
       #dangerous-clean-slate: true
 
-      - name: Deploy using ssh
+      - name: SSH Delpoyment
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSHHOST }}
