--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.6",
     "react-share": "^4.4.1",
+    "react-twitter-widgets": "^1.11.0",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "sass": "^1.59.3",
