--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
           #         port: 80
           script: |
             cd ../home/tmmk/public_html/tmmk-site
+            ssh-add ~/.ssh/tmmk-site
             git pull origin main
             git status
             npm install
