--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "axios": "^1.6.2",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "sass": "^1.69.5"
+    "react-markdown": "^8.0.6",
+    "react-share": "^4.4.1",
+    "react-twitter-widgets": "^1.11.0",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
+    "sass": "^1.59.3",
+    "sharp": "^0.33.0",
+    "swiper": "^10.0.4",
+    "typescript": "5.0.2"
   },
   "devDependencies": {
     "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
